syntax = "proto3";
package metabelarus.mbcorecr.crsign;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "crsign/auth.proto";
import "crsign/signature.proto";

option go_package = "github.com/metabelarus/mbcorecr/x/crsign/types";

// Query defines the gRPC querier service.
service Query {
	rpc Auth(QueryGetAuthRequest) returns (QueryGetAuthResponse) {
		option (google.api.http).get = "/metabelarus/mbcorecr/crsign/auths/{id}";
	}

	rpc Id2Service(QueryGetId2ServiceRequest) returns (QueryGetId2ServiceResponse) {
		option (google.api.http).get = "/metabelarus/mbcorecr/crsign/id2services/{id}";
	}

	rpc Signature(QueryGetSignatureRequest) returns (QueryGetSignatureResponse) {
		option (google.api.http).get = "/metabelarus/mbcorecr/crsign/signature/{id}";
	}
}


message QueryGetAuthRequest {
	string id = 1;
}

message QueryGetAuthResponse {
	Auth Auth = 1;
}

message QueryGetId2ServiceRequest {
	string id = 1;
}

message QueryGetId2ServiceResponse {
	Id2Service Id2Service = 1;
}

message QueryGetSignatureRequest {
	string id = 1;
}

message QueryGetSignatureResponse {
	Signature Signature = 1;
}